# PAPER_FINANCIAL_MACHINE_LEARNING

./: .gitignore  README.md  pyproject.toml
academic_report/: rapport.tex
data/snapshots/: AAPL_2020-01-01_2024-12-31.parquet  ABBV_2020-01-01_2024-12-31.parquet  BAC_2020-01-01_2024-12-31.parquet  C_2020-01-01_2024-12-31.parquet  DIS_2020-01-01_2024-12-31.parquet  F_2020-01-01_2024-12-31.parquet  GM_2020-01-01_2024-12-31.parquet  GOOGL_2020-01-01_2024-12-31.parquet  GS_2020-01-01_2024-12-31.parquet  HMC_2020-01-01_2024-12-31.parquet  JNJ_2020-01-01_2024-12-31.parquet  JPM_2020-01-01_2024-12-31.parquet  MCD_2020-01-01_2024-12-31.parquet  META_2020-01-01_2024-12-31.parquet  MSFT_2020-01-01_2024-12-31.parquet  (+11 more)
final_paper/: main.tex  references.bib
results/: backtest_equity.csv  backtest_metrics.csv  backtest_run_snapshot.json  inference_dm_pvalues.csv  inference_oof_cis.csv  inference_run_snapshot.json  nested_cv_best_params.csv  nested_cv_metrics.csv  nested_cv_predictions.csv  nested_cv_run_snapshot.json  nested_cv_selected_features.csv  purged_cv_results.csv
scripts/: check_gpu.py  make_paper_figures.py  run_backtest.py  run_inference.py  run_nested_cv.py  snapshot_data.py
src/: __init__.py  analysis.py  backtest.py  config.py  data.py  deep_learning.py  feature_selection.py  gpu.py  indicators.py  inference.py  models.py  pipeline.py  preprocessing.py  tuning.py  validation.py  visualization.py
tests/: test_backtest.py  test_data_snapshot.py  test_gpu_fallback.py  test_inference.py  test_label_construction.py  test_nested_pipeline.py  test_walk_forward.py
(+46 files in other folders)
