[project]
name = "projet"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<3.14"
dependencies = [
    "boruta>=0.4.3",
    "catboost>=1.2.8",
    "ipykernel>=7.2.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.0,<2.4",
    "optuna>=4.7.0",
    "pandas>=3.0.0",
    "pymupdf>=1.27.1",
    "pywavelets>=1.9.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "xgboost>=3.2.0",
    "yfinance>=1.1.0",
    "shap>=0.50.0",
    "mrmr-selection>=0.2.8",
    "torch>=2.0",
    "skorch>=1.0",
]
